# ExchangeSimulator

./: .gitignore
nse_fo_exchange_sim/: CMakeLists.txt  README.md
nse_fo_exchange_sim/config/: example.conf  example_tokens.txt  execution_strategy.conf  order_book_shm.conf
nse_fo_exchange_sim/docs/: protocol_9_48_context.md
nse_fo_exchange_sim/include/nse_fo_exchange_sim/: config.h  crypto.h  protocol.h  replay.h  simulator.h
nse_fo_exchange_sim/src/: config.cpp  crypto.cpp  main.cpp  replay.cpp  replay_main.cpp  runtime.cpp  simulator.cpp
nse_fo_exchange_sim/testdata/tls/: server.crt  server.key
nse_fo_exchange_sim/tests/: test_main.cpp
